Changelog for zest.releaser
===========================

2.9.4 (unreleased)
------------------

- Started unit tests.  [reinout]


2.9.3 (2009-09-22)
------------------

- Uploading to multiple package indexes should now work in python2.6
  (though ironically it now does not work for me on python2.4, but that
  has nothing to do with zest.releaser.)  Added documentation for this.
  [maurits]

- Make sure the next version suggestion for 1.0rc6 is 1.0rc7.
  [maurits]

- In subversion, first try to get the package from the setup.py before
  falling back to the svn info, just like for mercurial.  This fixes
  the problem that e.g. Products.feedfeeder was not recognized as
  being on pypi as the svn directory name was feedfeeder.
  [maurits]


2.9.2 (2009-09-17)
------------------

- Ümläüts in a changelog don't break the logger anymore when using python2.6.2
  when the umlauts turn up in the diff.  This is due to a 2.6.2 regression
  bug, see http://bugs.python.org/issue5170.  Should be fixed in 2.6.3 when it
  comes out.  [reinout]

- (Release 2.9 and 2.9.1 are unreleased because of a setuptools bug with,
  sigh, non-ascii characters which made a dirty setup.py hack necessary).
  [reinout]

2.8 (2009-08-27)
----------------

- Fixed the release command when used in a french environment.
  In French "svn info" returns 'URL :', not 'URL:'.
  [vincentfretin]


2.7 (2009-07-08)
----------------

- Before asking setup.py for its version or name, first run egg_info,
  as that may get rid of some warnings that otherwise end up in the
  extracted version or name, like UserWarnings.
  [maurits]


2.6 (2009-05-25)
----------------

- Small change: the questions don't print a newline anymore after the question
  (and before the user pressed enter).  This makes it clearer if enter has
  been pressed yet.  Suggestion by jkolman.  [reinout]


2.5 (2009-05-20)
----------------

- Revert to previous behaviour: when a package has not been released